2004-05-21  Philip Blundell  <philb@gnu.org>

	* stylus.c (gpe_stylus_mode): Also select stylus mode if
	GPE_PRETEND_STYLUS is set in the environment.

	* gpeiconlistview.c (_gpe_icon_list_view_popup): Deleted.
	(_gpe_icon_list_view_button_press): Emit show-popup signal on
	button 3 click, even if no icon under pointer.

2004-05-21  Philip Blundell  <philb@gnu.org>

	* gpeiconlistview.c (gpe_icon_list_view_init): Make embolden FALSE
	by default.
	(_gpe_icon_list_view_expose): Remove backing pixbuf; draw into the
	window directly.

2004-05-16  Philip Blundell  <philb@gnu.org>

	* gpeclockface.c: Use Cairo to draw hands, if enabled.  Remove
	support for drawing with Render directly.

	* Makefile: Include $(PACKAGE_LDFLAGS) in final link.
	
2004-05-16  Philip Blundell  <philb@gnu.org>

	* Makefile: Version 0.79 released.

2004-05-16  Philip Blundell  <philb@gnu.org>

	* gpeclockface.c: Add Cairo support.
	(draw_hand): Fix data type in non-RENDER case.
	(gpe_clock_face_set_hand_width): New function.
	* gpe/gpeclockface.h (gpe_clock_face_set_hand_width): New
	prototype.

	* Makefile: Add Cairo support.
	(HEADERS): Add gpeiconlistview.h.

2004-05-16  Philip Blundell  <philb@gnu.org>

	* gpeclockface.c (struct _GpeClockFace): Add border, hand_width,
	use_background_image, label_hours.
	(draw_hand): Use floating point for all positions.
	(gpe_clock_face_expose): Allow background image to be configured
	on/off at runtime.
	(gpe_clock_face_init): Initialise new struct members.
	(gpe_clock_face_set_radius): New.
	(gpe_clock_face_set_use_background_image): Likewise.
	(gpe_clock_face_set_label_hours): Likewise.

	* gpe/gpeclockface.h (gpe_clock_face_set_radius): Add prototype.
	(gpe_clock_face_set_use_background_image): Likewise.
	(gpe_clock_face_set_label_hours): Likewise.
	
	* gpeiconlistview.c: New file.
	* gpe/gpeiconlistview.h: Likewise.

	* gpeiconlist.gob: Implement in terms of GPEIconListView.
	(gpe_iconlist_update_icon_item_with_udata): Deleted.